# rust_weather_app

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.css  index.html
src/: main.rs
